make github pages adjustments

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta property="og:title" content="Parker Beard" />
     <meta property="og:description"
         content="Parker Beard is a software engineer and entrepreneur. He is passionate about technology, freedom, and the future of humanity." />
-    <meta property="og:url" content="https://parkerbeard.com/" />
-    <meta property="og:image" content="https://parkerbeard.com/images/index-card.png" />
+    <meta property="og:url" content="https://parkerbeard.github.io/parkerbeard.com/" />
+    <meta property="og:image" content="https://parkerbeard.github.io/parkerbeard.com/images/index-card.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="author" content="Parker Beard" />
     <meta name="description"
@@ -31,12 +31,12 @@
         }
     </style>
 
-    <link rel="preload" href="/fonts/Newsreader.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="/fonts/Newsreader-italic.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="stylesheet" href="/styles.css" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="alternate icon" type="image/png" href="/favicon-32x32.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="preload" href="./fonts/Newsreader.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="./fonts/Newsreader-italic.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="alternate icon" type="image/png" href="./favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
 
     <script>
         (function () {
@@ -64,8 +64,8 @@
     </script>
 
     <script src="https://cdn.usefathom.com/script.js" data-site="VDZFYXIJ" defer></script>
-    <script src="/darkmode.js" defer></script>
-    <script src="/footnotes.js" defer></script>
+    <script src="./darkmode.js" defer></script>
+    <script src="./footnotes.js" defer></script>
 </head>
 
 <body>
