--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         }
     </style>
 
-    <link rel="preload" href="./fonts/Newsreader.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="./fonts/Newsreader-italic.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preload" href="fonts/Newsreader.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="fonts/Newsreader-italic.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link rel="alternate icon" type="image/png" href="./favicon-32x32.png" />
     <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
@@ -64,8 +64,8 @@
     </script>
 
     <script src="https://cdn.usefathom.com/script.js" data-site="VDZFYXIJ" defer></script>
-    <script src="./darkmode.js" defer></script>
-    <script src="./footnotes.js" defer></script>
+    <script src="darkmode.js" defer></script>
+    <script src="footnotes.js" defer></script>
 </head>
 
 <body>
