default to darkmode

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 const root = document.documentElement;
                 const classes = ["preload"];
 
+                // Default to dark mode if not set in localStorage
+                if (localStorage.getItem("darkMode") === null) {
+                    localStorage.setItem("darkMode", "enabled");
+                }
+                
                 if (localStorage.getItem("darkMode") === "enabled") {
                     classes.push("dark-mode");
                     root.style.setProperty("--bg-color", "#141413");
@@ -58,6 +63,7 @@
                 document.documentElement.classList.add(
                     "preload",
                     "js-loaded",
+                    "dark-mode" // Add dark-mode class by default
                 );
             }
         })();
