--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
                 document.documentElement.classList.add(
                     "preload",
                     "js-loaded",
-                    "dark-mode" // Add dark-mode class by default
                 );
             }
         })();
@@ -107,12 +106,12 @@
                 <h3>Essays</h3>
                 <ul>
                     <li>
-                        <a href="/machines-of-loving-grace.html">Placeholder</a>
+                        <a href="/beyond-frontiers.html">Beyond Frontiers</a>
                     </li>
                 </ul>
             </section>
 
-            <section>
+            <!-- <section>
                 <h3>Projects</h3>
                 <ul>
                     <li>
@@ -120,7 +119,7 @@
                             rel="noopener noreferrer">Placeholder</a>
                     </li>
                 </ul>
-            </section>
+            </section> -->
 
             <section>
                 <h3>Links</h3>
@@ -141,7 +140,7 @@
 
     <script>
         console.log(
-            "%cIf you want to clone this website: https://github.com/parkerjbeard/parkerjbeard.com",
+            "%cThis is a template clone of Dario Amodei's website. You can find it on my Github: https://github.com/parkerjbeard/parkerjbeard.com",
             "font-family: monospace; font-size: 14px; color: #141413; background-color: #F0EFEA; padding: 5px; border-radius: 5px;",
         );
     </script>
