--- a/beyond-frontiers.html
+++ b/beyond-frontiers.html
@@ -26,12 +26,12 @@
                 font-family: Newsreader;
             }
         </style>
-        <link rel="preload" href="/fonts/Newsreader.woff2" as="font" type="font/woff2" crossorigin/>
-        <link rel="preload" href="/fonts/Newsreader-italic.woff2" as="font" type="font/woff2" crossorigin/>
-        <link rel="stylesheet" href="/styles.css"/>
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
-        <link rel="alternate icon" type="image/png" href="/favicon-32x32.png"/>
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
+        <link rel="preload" href="fonts/Newsreader.woff2" as="font" type="font/woff2" crossorigin/>
+        <link rel="preload" href="fonts/Newsreader-italic.woff2" as="font" type="font/woff2" crossorigin/>
+        <link rel="stylesheet" href="styles.css"/>
+        <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
+        <link rel="alternate icon" type="image/png" href="favicon-32x32.png"/>
+        <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
         <script>
             (function() {
                 try {
@@ -54,9 +54,9 @@
                 }
             })();
         </script>
-        <script src="/darkmode.js" defer></script>
-        <script src="/footnotes.js" defer></script>
-        <script src="/toc.js" defer></script>
+        <script src="darkmode.js" defer></script>
+        <script src="footnotes.js" defer></script>
+        <script src="toc.js" defer></script>
     </head>
     <body>
         <header>
