--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <h3>Essays</h3>
                 <ul>
                     <li>
-                        <a href="/beyond-frontiers.html">Beyond Frontiers</a>
+                        <a href="beyond-frontiers.html">Beyond Frontiers</a>
                     </li>
                 </ul>
             </section>
