--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
     <link rel="preload" href="fonts/Newsreader.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="fonts/Newsreader-italic.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-    <link rel="alternate icon" type="image/png" href="./favicon-32x32.png" />
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     <script>
         (function () {
