--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
     <header>
         <div>
-            <h1><a href="parkerbeard.com/">Parker Beard</a></h1>
+            <h1><a href="/">Parker Beard</a></h1>
             <div class="header-controls">
                 <div class="toggle-switch">
                     <input type="checkbox" id="darkModeToggle" class="toggle-input" />
