beyond frontiers edit

--- a/beyond-frontiers.html
+++ b/beyond-frontiers.html
@@ -61,7 +61,7 @@
         <header>
             <div>
                 <h1>
-                    <a href="/">Parker Beard</a>
+                    <a href="/parkerbeard.com/">Parker Beard</a>
                 </h1>
                 <div class="header-controls">
                     <div class="toggle-switch">
@@ -82,8 +82,8 @@
                 </p>
 
                 <p>
-                    I grew up idolizing history's great explorers and inventors. I knew everything a kid could know about Leonardo da Vinci. 
-                    For a school project on historical role models, I dressed up as Neil Armstrong. When people asked me what I wanted to be, I would say, “An inventor!” 
+                    I grew up idolizing history's great explorers and inventors. I knew everything a kid could know about Leonardo da Vinci and once dressed up as Neil Armstrong 
+                    for a school project on historical role models. When people asked me what I wanted to be, I would say, “An inventor!” 
                     I also distinctly remember hearing the well-worn phrase, “Born too late to explore the world, and too early to explore the stars.” 
                     As a young teen, that left a pit in my stomach. I wanted to sail towards uncharted lands or launch into space and make distant galaxies less distant. 
                     Equally, the drive to create was driven by a contrarian spirit and restless energy – I wanted to build things that challenged what we believed possible.
