--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <header>
         <div>
             <h1>
-                <a href="parkerbeard.com/">Parker Beard</a>
+                <a href="/">Parker Beard</a>
             </h1>
             <div class="header-controls">
                 <div class="toggle-switch">
