--- a/beyond-frontiers.html
+++ b/beyond-frontiers.html
@@ -61,7 +61,7 @@
         <header>
             <div>
                 <h1>
-                    <a href="/">Parker Beard</a>
+                    <a href="../">Parker Beard</a>
                 </h1>
                 <div class="header-controls">
                     <div class="toggle-switch">
