hide my twitter until i graduate

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
                     <li>
                         <a href="beyond-frontiers.html">Beyond Frontiers</a>
                     </li>
+                    <li>
+                        <a href="against-the-university.html">Against the University</a>
+                    </li>
                 </ul>
             </section>
 
@@ -122,9 +125,9 @@
             <section>
                 <h3>Links</h3>
                 <ul>
-                    <li>
+                    <!-- <li>
                         <a href="https://x.com/parkerjbeard" target="_blank" rel="noopener noreferrer">X/Twitter</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="https://github.com/parkerjbeard" target="_blank" rel="noopener noreferrer">Github</a>
                     </li>
