publish "the censorship paradox"

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                     <li>
                         <a href="against-the-university.html">Against the University</a>
                     </li>
+                    <li>
+                        <a href="the-censorship-paradox.html">The Censorship Paradox</a>
+                    </li>
                 </ul>
             </section>
 
