publish "the nightmares I carry" and update bio

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Parker Beard</title>
     <meta property="og:title" content="Parker Beard" />
     <meta property="og:description"
-        content="Parker Beard is a software engineer and entrepreneur. He is passionate about technology, freedom, and the future of humanity." />
+        content="Parker Beard is a software engineer and aspiring entrepreneur. He is passionate about technology, freedom, and the future of humanity." />
     <meta property="og:url" content="https://parkerbeard.github.io/parkerbeard.com/" />
     <meta property="og:image" content="https://parkerbeard.github.io/parkerbeard.com/images/index-card.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="author" content="Parker Beard" />
     <meta name="description"
-        content="Parker Beard is a software engineer and entrepreneur. He is passionate about technology, freedom, and the future of humanity." />
+        content="Parker Beard is a software engineer and aspiring entrepreneur. He is passionate about technology, freedom, and the future of humanity." />
 
     <style>
         html {
@@ -93,7 +93,7 @@
         <article class="content-container">
             <section>
                 <p>
-                    Parker Beard is a software engineer and entrepreneur. He is passionate about technology, freedom,
+                    Parker Beard is a software engineer and aspiring entrepreneur. He is passionate about technology, freedom,
                     and the future of humanity.
                 </p>
                 <p>Parker is currently studying philosophy at Pepperdine University.
@@ -111,6 +111,9 @@
                     </li>
                     <li>
                         <a href="the-censorship-paradox.html">The Censorship Paradox</a>
+                    </li>
+                    <li>
+                        <a href="the-nightmares-i-carry.html">The Nightmares I Carry</a>
                     </li>
                 </ul>
             </section>
