cut a line for redundancy

--- a/the-nightmares-i-carry.html
+++ b/the-nightmares-i-carry.html
@@ -157,7 +157,7 @@
             <p>
                 My dreams do not give me answers, only consequences. They do not comfort me, only remind me what is at stake. Harsh as it is, I value this reminder. 
                 The cost of inaction is <i>everything</i>. Nothing takes precedence over preventing the suffering of those that I love. These dreams both emerge from and 
-                reinforce the urgency I already feel. If peaceful sleep has not yet come, perhaps it must be earned.
+                reinforce the urgency I already feel.
             </p>
             <p>
                 Maybe one day I'll have good dreams, but I won’t wait for them. If peace must be earned, then I will spend my life paying the price. 
