--- a/the-nightmares-i-carry.html
+++ b/the-nightmares-i-carry.html
@@ -115,7 +115,7 @@
             </p>
 
             <p>
-                In the last two years, I have had a single good dream. I don't remember the dream itself, 
+                Since the start of college, I have had a single good dream. I don't remember the dream itself, 
                 only that I woke up without the familiar weight of something unfinished. It slipped away too quickly, 
                 leaving only the sense that, for a moment, my mind had shown me something whole—something I was not meant to keep.
             </p>
