publish before the cage

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                     <li>
                         <a href="the-nightmares-i-carry.html">The Nightmares I Carry</a>
                     </li>
+                    <li>
+                        <a href="before-the-cage.html">Before the Cage</a>
+                    </li>
                 </ul>
             </section>
 
