--- a/template.html
+++ b/template.html
@@ -3,102 +3,111 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Your Title Here</title>
-    
-    <!-- Meta Tags -->
-    <meta property="og:title" content="Your Title Here"/>
-    <meta property="og:description" content="Your description here"/>
-    <meta name="description" content="Your description here"/>
-    <meta name="author" content="Your Name"/>
 
+    <!-- Page Title -->
+    <title><!-- ESSAY_TITLE --></title>
+
+    <!-- Open Graph Meta -->
+    <meta property="og:title" content="<!-- ESSAY_TITLE -->"/>
+    <meta property="og:description" content="<!-- ESSAY_SUBTITLE -->"/>
+    <meta property="og:url" content="https://parkerbeard.com/<!-- ESSAY_SLUG -->"/>
+    <meta property="og:image" content="https://parkerbeard.com/images/<!-- ESSAY_SLUG -->-card.png"/>
+
+    <!-- Twitter Card Meta -->
+    <meta name="twitter:card" content="summary_large_image"/>
+
+    <!-- Author & Description -->
+    <meta name="author" content="Parker Beard"/>
+    <meta name="description" content="<!-- ESSAY_SUBTITLE -->"/>
+
+    <!-- Inline Style/Fonts -->
     <style>
-        /* Core styles */
-        :root {
-            --bg-color: #f0efea;
-            --text-color: #141413;
-            --font-size-base: 20px;
-            --content-max-width: 620px;
+        html {
+            visibility: hidden;
         }
 
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
-            font-size: var(--font-size-base);
-            line-height: 1.6;
-            color: var(--text-color);
-            background-color: var(--bg-color);
-            margin: 0;
-            padding: 0;
+        html.js-loaded {
+            visibility: visible;
         }
 
-        /* Layout */
+        header h1 a {
+            display: block;
+            width: 140px;
+            font-family: Newsreader;
+        }
+
+        /* Add bottom spacing to the content */
         .content-wrapper {
-            max-width: var(--content-max-width);
-            margin: 0 auto;
-            padding: 0 20px;
+            padding-bottom: 6rem;
         }
 
-        /* Typography */
-        h1 {
-            font-size: 3em;
-            line-height: 1.2;
-            margin: 1em 0 0.5em;
-        }
-
-        h2 {
-            font-size: 1.6em;
-            margin: 1.5em 0 0.5em;
-        }
-
-        h3 {
-            font-size: 1.2em;
-            margin: 1.5em 0 0.5em;
-        }
-
-        p {
-            margin: 0 0 1em;
-        }
-
-        /* Lists */
-        ul, ol {
-            padding-left: 20px;
-            margin: 0 0 1em;
-        }
-
-        li {
-            margin-bottom: 0.5em;
-        }
-
-        /* Links */
-        a {
-            color: inherit;
-            text-decoration: underline;
-            text-decoration-thickness: 1.5px;
-            text-underline-offset: 2px;
-        }
-
-        /* Mobile adjustments */
-        @media (max-width: 768px) {
-            :root {
-                --font-size-base: 18px;
-            }
-
-            h1 {
-                font-size: 2.4em;
-            }
-
-            h2 {
-                font-size: 1.4em;
-            }
+        /* Ensure the last paragraph has margin too */
+        .content-container p:last-child {
+            margin-bottom: 6rem;
         }
     </style>
+
+    <!-- Preloading fonts (optional) -->
+    <link rel="preload" href="fonts/Newsreader.woff2" as="font" type="font/woff2" crossorigin/>
+    <link rel="preload" href="fonts/Newsreader-italic.woff2" as="font" type="font/woff2" crossorigin/>
+
+    <!-- Main styles -->
+    <link rel="stylesheet" href="styles.css"/>
+
+    <!-- Favicon & Icons -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
+    <link rel="alternate icon" type="image/png" href="favicon-32x32.png"/>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
+
+    <!-- Dark Mode Script -->
+    <script>
+        (function() {
+            try {
+                const root = document.documentElement;
+                const classes = ["preload"];
+
+                if (localStorage.getItem("darkMode") === "enabled") {
+                    classes.push("dark-mode");
+                    root.style.setProperty("--bg-color", "#141413");
+                    root.style.setProperty("--text-color", "#f0efea");
+                }
+
+                root.classList.add(...classes);
+
+                queueMicrotask(() => {
+                    root.classList.add("js-loaded");
+                });
+            } catch (e) {
+                document.documentElement.classList.add("preload", "js-loaded");
+            }
+        })();
+    </script>
+
+    <!-- Additional Scripts -->
+    <script src="darkmode.js" defer></script>
+    <script src="footnotes.js" defer></script>
 </head>
 
 <body>
+    <header>
+        <div>
+            <h1>
+                <a href="./">Parker Beard</a>
+            </h1>
+            <div class="header-controls">
+                <div class="toggle-switch">
+                    <input type="checkbox" id="darkModeToggle" class="toggle-input"/>
+                    <label for="darkModeToggle" class="toggle-label">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <main class="content-wrapper">
-        <article>
-            <!-- Paste your converted markdown content here -->
-            <h1>Your Title</h1>
-            <p>Your content goes here...</p>
+        <article class="content-container">
+            <!-- ESSAY_CONTENT -->
         </article>
     </main>
 </body>
