--- a/the-last-warden.html
+++ b/the-last-warden.html
@@ -189,7 +189,7 @@
                 These were not the words of traitors, not of fools,
             </p>
             <p class="group-end">
-                But of men who have never known the cost of an open sky
+                but of men who have never known the cost of an open sky
             </p>
             <h3>II. The First Cut</h3>
             <p class="group-end">
@@ -335,7 +335,7 @@
                 But memory is weaker than stone,
             </p>
             <p class="group-end">
-                And soon the clearing stretched further.
+                and soon the clearing stretched further.
             </p>
             <p>
                 Those who had seen the trees grew old;
@@ -417,10 +417,10 @@
                 They carried no banners, raised no armies,
             </p>
             <p>
-                They came softly—as merchants, as scribes,
+                they came softly—as merchants, as scribes,
             </p>
             <p class="group-end">
-                As gentle men with careful hands.
+                as gentle men with careful hands.
             </p>
             <p class="group-end">
                 In the emptiness, they whispered softly, as always:
@@ -462,10 +462,10 @@
                 And when the towers began to sink,
             </p>
             <p>
-                The wardens pleaded for answers,
+                the wardens pleaded for answers,
             </p>
             <p class="group-end">
-                But the shadow men only smiled.
+                but the shadow men only smiled.
             </p>
             <p class="group-end">
                 Their work was finished.
@@ -478,19 +478,19 @@
                 Laws without spirit,
             </p>
             <p>
-                Walls without roots,
+                walls without roots,
             </p>
             <p class="group-end">
-                Words without belief.
+                words without belief.
             </p>
             <p>
                 They preserved memory instead of land,
             </p>
             <p>
-                Built monuments instead of tending groves,
+                built monuments instead of tending groves,
             </p>
             <p class="group-end">
-                Measured fractures and named them order.
+                measured fractures and named them order.
             </p>
             <p>
                 They spoke of duty, delaying ruin,
@@ -541,10 +541,10 @@
                 He watched shadow men trade trees for towers,
             </p>
             <p>
-                Heard whispers become commerce,
+                heard whispers become commerce,
             </p>
             <p class="group-end">
-                Felt promises hollow into silence.
+                felt promises hollow into silence.
             </p>
             <p>
                 Standing atop the last tower, he saw dust—
@@ -553,10 +553,10 @@
                 Dust drifting across empty roads,
             </p>
             <p>
-                Settling on fields no hand had tilled,
+                settling on fields no hand had tilled,
             </p>
             <p class="group-end">
-                Rising from temples where men prayed only to themselves.
+                rising from temples where men prayed only to themselves.
             </p>
             <p>
                 The trees had not fallen.
@@ -577,10 +577,10 @@
                 The forest was not taken, only quietly surrendered,
             </p>
             <p>
-                Until what remained was too small to name,
+                until what remained was too small to name,
             </p>
             <p class="group-end">
-                Too broken to mourn.
+                too broken to mourn.
             </p>
             <p>
                 The wardens had allowed it.
@@ -858,10 +858,10 @@
                 The man who had left the towers behind,
             </p>
             <p>
-                Who had knelt before the root,
+                who had knelt before the root,
             </p>
             <p class="group-end">
-                Who had placed his hands in the soil and felt not hope, but recognition.
+                who had placed his hands in the soil and felt not hope, but recognition.
             </p>
             <p>
                 He had spent his life tending the walls, believing the walls could hold the land together.
@@ -909,7 +909,7 @@
                 And when he walked among the trees, they bent toward him,
             </p>
             <p class="group-end">
-                Recognizing their own.
+                recognizing their own.
             </p>
             <p>
                 For the people no longer knew how to want,
@@ -957,13 +957,13 @@
                 What rose now did not rest on walls, nor towers,
             </p>
             <p>
-                Nor halls when men argued over words.
+                nor halls when men argued over words.
             </p>
             <p>
                 It did not hold what could not be held,
             </p>
             <p class="group-end">
-                Nor preserve what was already dead.
+                nor preserve what was already dead.
             </p>
             <p>
                 It grew, as trees grow—
@@ -996,7 +996,7 @@
                 <strong><i>And as long as the root was known, </i></strong>
             </p>
             <p class="group-end">
-                <strong><i>The forest would stand. </i></strong>
+                <strong><i>the forest would stand. </i></strong>
             </p>            
         </article>
     </main>
