--- a/the-last-warden.html
+++ b/the-last-warden.html
@@ -323,7 +323,7 @@
                 And last, with weary resignation, to those who asked nothing yet took <b>everything</b>.
             </p>
             <p>
-                At first, the keepers. still spoke reverently of the trees.
+                At first, the keepers still spoke reverently of the trees.
             </p>
             <p>
                 They traced carefully where roots had run deep,
@@ -438,10 +438,10 @@
                 The wardens—sworn guardians of fading meaning—
             </p>
             <p>
-                Welcomed them, mistaking quiet confidence for wisdom,
+                welcomed them, mistaking quiet confidence for wisdom,
             </p>
             <p class="group-end">
-                Commerce for renewal.
+                commerce for renewal.
             </p>
             <p>
                 Piece by piece, the world was sold.
