--- a/the-last-warden.html
+++ b/the-last-warden.html
@@ -135,7 +135,7 @@
                 Trees stood like pillars, their branches a vaulted sky of green and gold.
             </p>
             <p>
-                In the quiet of dawn, mist drifted low over water that ran clean and pure
+                In the quiet of dawn, mist drifted low over water that ran clean and pure.
             </p>
             <p class="group-end">
                 At dusk, the leaves caught the last light like embers, the air thick with pine.
@@ -159,7 +159,7 @@
                 Each man had his place, his burden, his portion of the whole.
             </p>
             <p class="group-end">
-                The trees held them together—not by law, nor by force, but by the weight of natural order
+                The trees held them together—not by law, nor by force, but by the weight of natural order.
             </p>
             <p>
                 The roots bound the land as duty bound its people.
@@ -189,7 +189,7 @@
                 These were not the words of traitors, not of fools,
             </p>
             <p class="group-end">
-                but of men who have never known the cost of an open sky
+                but of men who have never known the cost of an open sky.
             </p>
             <h3>II. The First Cut</h3>
             <p class="group-end">
@@ -268,7 +268,7 @@
                 And in the hush that followed, in the breath between what could have been and what would become—
             </p>
             <p class="group-end">
-                There was a choice.
+                there was a choice.
             </p>
             <p class="group-end">
                 They could have stopped.
@@ -314,13 +314,13 @@
                 They opened their gates—
             </p>
             <p>
-                First, to those who hungered for the fruit;
+                first, to those who hungered for the fruit;
             </p>
             <p>
-                Then, to those who promised growth from timber;
+                then, to those who promised growth from timber;
             </p>
             <p class="group-end">
-                And last, with weary resignation, to those who asked nothing yet took <b>everything</b>.
+                and last, with weary resignation, to those who asked nothing yet took <b>everything</b>.
             </p>
             <p>
                 At first, the keepers still spoke reverently of the trees.
@@ -329,7 +329,7 @@
                 They traced carefully where roots had run deep,
             </p>
             <p class="group-end">
-                They marked faithfully where branches had sheltered generations.
+                they marked faithfully where branches had sheltered generations.
             </p>
             <p>
                 But memory is weaker than stone,
@@ -341,10 +341,10 @@
                 Those who had seen the trees grew old;
             </p>
             <p>
-                Those who had not seen them grew numerous;
+                those who had not seen them grew numerous;
             </p>
             <p class="group-end">
-                Those who only knew only tales grew skeptical.
+                those who only knew only tales grew skeptical.
             </p>
             <p>
                 Fruit was gathered, yet no seeds returned to earth.
@@ -353,7 +353,7 @@
                 Wood was carried off, yet no groves arose in their place.
             </p>
             <p class="group-end">
-                Land, once carefully tended, now lay starving
+                Land, once carefully tended, now lay starving.
             </p>
             <p class="group-end">
                 And then came the question, quiet yet piercing:
@@ -371,7 +371,7 @@
                 And from that silence emerged men who waited,
             </p>
             <p>
-                Shadow men who built nothing, sowed nothing—yet gathered everything.
+                shadow men who built nothing, sowed nothing—yet gathered everything.
             </p>
             <p>
                 They did not speak loudly, for they did not need to.
@@ -450,13 +450,13 @@
                 Not by conquest, but gently—by compromise,
             </p>
             <p class="group-end">
-                By hands that forgot how to hold loss.
+                by hands that forgot how to hold loss.
             </p>
             <p>
                 They did not fell the trees;
             </p>
             <p class="group-end">
-                They merely accepted what was freely offered.
+                they merely accepted what was freely offered.
             </p>
             <p>
                 And when the towers began to sink,
@@ -499,7 +499,7 @@
                 Invoked honor, adorning robes—
             </p>
             <p class="group-end">
-                Recalling the past only to confirm that its absence.
+                recalling the past only to confirm that its absence.
             </p>
             <p>
                 And when the land could yield nothing more, they left.
@@ -520,13 +520,13 @@
                 Nor because anything was left to save—
             </p>
             <p class="group-end">
-                But because the land was in him, and he could not let go.
+                but because the land was in him, and he could not let go.
             </p>
             <p>
                 He had worn their name, stood among them, sworn their oaths—
             </p>
             <p class="group-end">
-                But while they had only spoken of the land, he had loved it.
+                but while they had only spoken of the land, he had loved it.
             </p>
             <p>
                 He had walked beneath its canopy in memories older than himself.
@@ -550,7 +550,7 @@
                 Standing atop the last tower, he saw dust—
             </p>
             <p>
-                Dust drifting across empty roads,
+                dust drifting across empty roads,
             </p>
             <p>
                 settling on fields no hand had tilled,
@@ -568,10 +568,10 @@
                 First for trade,
             </p>
             <p>
-                Then for peace,
+                then for peace,
             </p>
             <p class="group-end">
-                Finally, for nothing at all.
+                finally, for nothing at all.
             </p>
             <p>
                 The forest was not taken, only quietly surrendered,
@@ -592,10 +592,10 @@
                 Now alone, he felt the tower shudder beneath him—
             </p>
             <p>
-                Stone, heavy and rootless,
+                stone, heavy and rootless,
             </p>
             <p class="group-end">
-                Sinking slowly into earth.
+                sinking slowly into earth.
             </p>
             <h3>VI. Beneath the Dust</h3>
             <p>
@@ -605,7 +605,7 @@
                 believing stone could bind the land—
             </p>
             <p class="group-end">
-                But stone binds nothing.
+                but stone binds nothing.
             </p>
             <p class="group-end">
                 It had been held by the trees.
@@ -710,7 +710,7 @@
                 A man who had never let himself break until now.
             </p>
             <p class="group-end">
-                And so he knelt, not to seek, not to pray, but because <b>he had nowhere else to go</b>.
+                And so he knelt, not to seek, not to pray, but because <b>he had nowhere else to go.</b>
             </p>
             <p class="group-end">
                 His hands pressed into the dirt.
@@ -740,7 +740,7 @@
                 Deep beneath ruin, beneath neglect, beneath forgotten years—
             </p>
             <p class="group-end">
-                <b>Something lived.</b>
+                <b>something lived.</b>
             </p>
             <p class="group-end">
                 His breath caught, but not in despair.
@@ -749,7 +749,7 @@
                 His fingers dug deeper, pushing through dry earth, through lifeless soil—
             </p>
             <p class="group-end">
-                Until at last, he touched it.
+                until at last, he touched it.
             </p>
             <p class="group-end">
                 <strong><i>The root. </i></strong>
@@ -758,7 +758,7 @@
                 Thin, buried, starved of light—
             </p>
             <p class="group-end">
-                But <b>alive.</b>
+                but <b>alive.</b>
             </p>
             <p class="group-end">
                 His chest shuddered.
@@ -795,7 +795,7 @@
                 But for those who still knew, even if they did not yet understand—
             </p>
             <p class="group-end">
-                There was a way back.
+                there was a way back.
             </p>
             <p class="group-end">
                 The first tree grew in silence.
@@ -840,7 +840,7 @@
                 For as the roots stretched unseen beneath their feet, something in them stretched too—
             </p>
             <p class="group-end">
-                <b>Something that had never truly left</b>
+                <b>Something that had never truly left.</b>
             </p>
             <p>
                 They did not call councils.
@@ -900,10 +900,10 @@
                 His crown was living—
             </p>
             <p>
-                Woven of roots, rising from earth, binding him not to power,
+                woven of roots, rising from earth, binding him not to power,
             </p>
             <p class="group-end">
-                But to the land itself.
+                but to the land itself.
             </p>
             <p>
                 And when he walked among the trees, they bent toward him,
@@ -942,7 +942,7 @@
                 <b>They thought they were learning,</b>
             </p>
             <p class="group-end">
-                <b>But they were only remembering</b>
+                <b>but they were only remembering.</b>
             </p>
             <p>
                 For the trees had not come back for them.
@@ -969,13 +969,13 @@
                 It grew, as trees grow—
             </p>
             <p>
-                Slowly, quietly,
+                slowly, quietly,
             </p>
             <p>
-                Roots that reached deep into earth,
+                roots that reached deep into earth,
             </p>
             <p class="group-end">
-                Branches stretching skyward,  never shadowing the heavens.
+                branches stretching skyward,  never shadowing the heavens.
             </p>
             <p>
                 It did not call itself eternal.
