--- a/the-last-warden.html
+++ b/the-last-warden.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!-- Page Title -->
-    <title><!-- ESSAY_TITLE --></title>
+    <title>The Last Warden</title>
 
     <!-- Open Graph Meta -->
-    <meta property="og:title" content="<!-- ESSAY_TITLE -->"/>
-    <meta property="og:description" content="<!-- ESSAY_SUBTITLE -->"/>
-    <meta property="og:url" content="https://parkerbeard.com/<!-- ESSAY_SLUG -->"/>
-    <meta property="og:image" content="https://parkerbeard.com/images/<!-- ESSAY_SLUG -->-card.png"/>
+    <meta property="og:title" content="The Last Warden"/>
+    <meta property="og:description" content="The Cost of an Open Sky"/>
+    <meta property="og:url" content="https://parkerbeard.com/the-last-warden"/>
+    <meta property="og:image" content="https://parkerbeard.com/images/the-last-warden-card.png"/>
 
     <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image"/>
 
     <!-- Author & Description -->
     <meta name="author" content="Parker Beard"/>
-    <meta name="description" content="<!-- ESSAY_SUBTITLE -->"/>
+    <meta name="description" content="The Cost of an Open Sky"/>
 
     <!-- Inline Style/Fonts -->
     <style>
