publish the death of beauty

--- a/index.html
+++ b/index.html
@@ -352,8 +352,16 @@
                     <div class="essays-list">
                         <div class="essay-item">
                             <div class="essay-title">
-                                <a href="the-last-warden.html">The Last Warden</a>
+                                <a href="the-death-of-beauty.html">The Death of Beauty</a>
                                 <span class="latest-tag">Latest</span>
+                            </div>
+                            <span class="essay-date">18 April 2025</span>
+                            <p class="essay-excerpt">A civilization's surrender to sanctioned decay.</p>
+                        </div>
+                        
+                        <div class="essay-item">
+                            <div class="essay-title">
+                                <a href="the-last-warden.html">The Last Warden</a>
                             </div>
                             <span class="essay-date">7 April 2025</span>
                             <p class="essay-excerpt">When the forest falls and towers rise, the roots remain.</p>
