add new essay "Patriotic for What?" and update index.html with new content

--- a/index.html
+++ b/index.html
@@ -352,8 +352,16 @@
                     <div class="essays-list">
                         <div class="essay-item">
                             <div class="essay-title">
-                                <a href="the-death-of-beauty.html">The Death of Beauty</a>
+                                <a href="patriotic-for-what.html">Patriotic for What?</a>
                                 <span class="latest-tag">Latest</span>
+                            </div>
+                            <span class="essay-date">4 July 2025</span>
+                            <p class="essay-excerpt">A reflection on the American spirit.</p>
+                        </div>
+                        
+                        <div class="essay-item">
+                            <div class="essay-title">
+                                <a href="the-death-of-beauty.html">The Death of Beauty</a>
                             </div>
                             <span class="essay-date">18 April 2025</span>
                             <p class="essay-excerpt">A civilization's surrender to sanctioned decay.</p>
