--- a/template.html
+++ b/template.html
@@ -86,6 +86,7 @@
     <!-- Additional Scripts -->
     <script src="darkmode.js" defer></script>
     <script src="footnotes.js" defer></script>
+    <script src="readtime.js" defer></script>
 </head>
 
 <body>
