Correct typo in index.html: changed "current" to "currently" in author description.

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         <p>
                             Parker Beard writes essays against the illusions of the modern world, exploring what it means to live courageously, build meaningfully, and resurrect the untamed spirit of American greatness.
                         </p>
-                        <p>He is current working at Rainmaker as a Forward Deployed Engineer. All opinions are his own.</p>
+                        <p>He is currently working at Rainmaker as a Forward Deployed Engineer. All opinions are his own.</p>
                         <p id="age-counter" class="age-counter"></p>
                     </section>
 
